# fanthus-project-dashboard

./: README.md  index.html  package-lock.json  package.json
src/: App.jsx  index.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  git.rs  lib.rs  main.rs  models.rs  scanner.rs  storage.rs
src/components/: GitPanel.jsx  ProjectCard.jsx  ProjectDetail.jsx  ProjectFormModal.jsx  ProjectList.jsx  ReadmeViewer.jsx  ScriptPanel.jsx  Sidebar.jsx
src/hooks/: useAutostart.js  useProjects.js
src/styles/: app.css  base.css  tokens.css
src/utils/: confirm.js  git.js  status.js
