[package]
name = "projectdashboard"
version = "0.1.0"
description = "DevDash local project dashboard"
authors = ["ProjectDashboard"]
edition = "2021"

[lib]
name = "projectdashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "projectdashboard"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
